--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,26 +1,11 @@
-<h2>Products</h2>
+<h2>Product Details</h2>
 
-<div *ngFor="let product of products">
+<div *ngIf="product">
+  <h3>{{ product.name }}</h3>
+  <h4>{{ product.price | currency }}</h4>
+  <p>{{ product.description }}</p>
 
-  <h3>
-    <a [title]="product.name + ' details'">
-      {{ product.name }}
-    </a>
-  </h3>
-
-  <p *ngIf="product.description">
-    Description: {{ product.description }}
-  </p>
-
-  <button (click)="share()">
-    Share
-  </button>
-
-  <app-product-alerts 
-    [product]="product"
-    (notify)="onNotify()">
-  </app-product-alerts>
-
+  <button (click)="addToCart(product)">Buy</button>
 </div>
 
 
